# rTags

./: LICENSE  README.md  main.py  pyproject.toml
data/: test.ass  test.srt
routers/: rtags.py  translate_subtitle.py
utils/: ai_utils.py  auth_utils.py
