[project]
name = "rtags"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "googletrans>=4.0.2",
    "openai>=1.65.5",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "srt>=3.5.3",
    "uvicorn>=0.34.0",
]
